:art: feat(video): 테스트코드, 리포지토리 수정